<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:gravity="top|center_vertical|center_horizontal|center"
    android:orientation="vertical"
    android:background="#ffc469">

    <TextView
        android:id="@+id/tours_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:textSize="20dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/tours_welcome"
        android:textColor="#000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_tours_class"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/tours_class"
        android:background="#f00"
        android:onClick="onClassTourClicked"/>

    <Button
        android:id="@+id/button_tours_residential"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/tours_residential"
        android:background="#f87531"
        android:onClick="onResidentialClicked"/>

    <Button
        android:id="@+id/button_tours_art"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/tours_art"
        android:background="#ffA500"
        android:onClick="onArtClicked"/>

    <Button
        android:id="@+id/button_tours_weekend"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/tours_weekend"
        android:background="#ff8c00"
        android:onClick="onWeekendClicked"/>
</LinearLayout>